# httpd3

./: .gitignore  README.md
src/: CMakeLists.txt  main.c  read_config.c  read_config.h
src/config/: wsx.conf
src/handle/: err_deal.h  hancle_read.c  handle.c  handle.h  handle_core.h  handle_read.c  handle_read.h  handle_write.c  handle_write.h  http_response.c  http_response.h
src/memop/: manage.c  manage.h
src/util/: wsx_string.c  wsx_string.h
